# tarman-studio

./: .gitignore  Makefile  README.md  install-online.sh  install-pyenv.sh  install.sh  pyproject.toml  tarman-studio.desktop  uninstall-pyenv.sh
.github/workflows/: release.yml
docs/: GITHUB_RELEASE.md
packaging/: tarman_gui_entry.py
scripts/: build-appimage.sh
tarman/: __init__.py  cli.py  core.py  gui.py  resources.py
tests/: test_core.py
